--- a/default-config.json
+++ b/default-config.json
@@ -99,8 +99,8 @@
     "Teleport To EmberTwin": "T,Digit3",
     "Teleport To AshTwin": "T,Digit4",
     "Teleport To AshTwinProject": "T,Numpad8",
-    "Teleport To TimerHearth": "T,Digit5",
-    "Teleport To TimerHearth Probe": "T,Numpad1",
+    "Teleport To TimberHearth": "T,Digit5",
+    "Teleport To TimberHearth Probe": "T,Numpad1",
     "Teleport To Attlerock": "T,Digit6",
     "Teleport To BrittleHollow": "T,Digit7",
     "Teleport To HollowLattern": "T,Digit8",
