--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"filename": "PacificEngine.OW_CheatsMod.dll",
-	"author": "PacificEngine",
-	"name": "Cheats Mod",
-	"uniqueName": "PacificEngine.CheatsMod",
+	"filename": "CheatsMod.dll",
+	"author": "MegaPiggy",
+	"name": "Cheats Mod (No CR)",
+	"uniqueName": "MegaPiggy.CheatsMod",
 	"version": "0.7.5",
 	"owmlVersion": "2.2.0",
-	"dependencies": [ "PacificEngine.OW_CommonResources" ],
+	"conflicts": [ "PacificEngine.OW_CommonResources", "PacificEngine.CheatsMod" ],
 	"enabled": true
 }
