Fix typos and add to readme

--- a/default-config.json
+++ b/default-config.json
@@ -106,10 +106,10 @@
     "Teleport To AshTwin": "T,Digit4",
     "Teleport To AshTwinProject": "T,Numpad8",
     "Teleport To TimberHearth": "T,Digit5",
-    "Teleport To TimberHearth Probe": "T,Numpad1",
+    "Teleport To SkyShutterSatellite": "T,Numpad1",
     "Teleport To Attlerock": "T,Digit6",
     "Teleport To BrittleHollow": "T,Digit7",
-    "Teleport To HollowLattern": "T,Digit8",
+    "Teleport To HollowsLantern": "T,Digit8",
     "Teleport To GiantsDeep": "T,Digit9",
     "Teleport To ProbeCannon": "T,Numpad2",
     "Teleport To ProbeCannonCommandModule": "T,NumpadPeriod",
