--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
+	"$schema": "https://raw.githubusercontent.com/ow-mods/owml/master/schemas/manifest_schema.json",
 	"filename": "CheatsMod.dll",
 	"author": "MegaPiggy",
 	"name": "Cheats Mod (No CR)",
 	"uniqueName": "MegaPiggy.CheatsMod",
 	"version": "0.7.5",
 	"owmlVersion": "2.2.0",
-	"conflicts": [ "PacificEngine.OW_CommonResources", "PacificEngine.CheatsMod" ],
-	"enabled": true
+	"conflicts": [ "PacificEngine.OW_CommonResources", "PacificEngine.CheatsMod" ]
 }
