--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"$schema": "https://raw.githubusercontent.com/ow-mods/owml/master/schemas/manifest_schema.json",
-	"filename": "CheatsMod.dll",
+	"filename": "CheatsModNoCR.dll",
 	"author": "MegaPiggy",
 	"name": "Cheats Mod (No CR)",
-	"uniqueName": "MegaPiggy.CheatsMod",
+	"uniqueName": "MegaPiggy.CheatsModNoCR",
 	"version": "0.7.5",
 	"owmlVersion": "2.2.0",
 	"conflicts": [ "PacificEngine.OW_CommonResources", "PacificEngine.CheatsMod" ]
