--- a/default-config.json
+++ b/default-config.json
@@ -176,16 +176,16 @@
     "Give Slide SignalJammer": "G,R,S,Numpad3",
     "Give Slide Homeworld": "G,R,S,Numpad4",
     "Give Slide SupernovaEscape": "G,R,S,Numpad5",
-    "Give Slide Path 1": "G,R,P,Digit1",
-    "Give Slide Path 2": "G,R,P,Digit2",
-    "Give Slide Path 3": "G,R,P,Digit3",
-    "Give Slide Seal 1": "G,R,P,Digit4",
-    "Give Slide Seal 2": "G,R,P,Digit5",
-    "Give Slide Seal 3": "G,R,P,Digit6",
-    "Give Slide Rule 1": "G,R,P,Digit7",
-    "Give Slide Rule 2": "G,R,P,Digit8",
-    "Give Slide Rule 3": "G,R,P,Digit9",
-    "Give Slide Rule 4": "G,R,P,Digit0",
+    "Give Slide Path 1": "G,R,H,Digit1",
+    "Give Slide Path 2": "G,R,H,Digit2",
+    "Give Slide Path 3": "G,R,H,Digit3",
+    "Give Slide Seal 1": "G,R,H,Digit4",
+    "Give Slide Seal 2": "G,R,H,Digit5",
+    "Give Slide Seal 3": "G,R,H,Digit6",
+    "Give Slide Rule 1": "G,R,H,Digit7",
+    "Give Slide Rule 2": "G,R,H,Digit8",
+    "Give Slide Rule 3": "G,R,H,Digit9",
+    "Give Slide Rule 4": "G,R,H,Digit0",
 
     "Give Identify Conversation Stone": "C,Digit2",
     "Give Explain Conversation Stone": "C,Digit3",
